[IDP-1378] Support Http response codes with uri input parameters
